feat(pet): update routes to make more sense
