# plugins/pet-backend/src/schema/openapi.yaml
@@ -40,12 +40,6 @@ paths:
           required: true
           schema:
             type: string
-        - name: type
-          in: query
-          required: false
-          description: Type of the pet to filter by
-          schema:
-            type: string
       responses:
         '200':
           description: Pet found
@@ -95,12 +89,12 @@ paths:
 
   /pets:
     get:
-      description: Get pets by name
+      description: Get pets
       parameters:
         - name: name
           in: query
-          required: true
-          description: Name of the pet to retrieve
+          required: false
+          description: Name of the pets to retrieve
           schema:
             type: string
       responses:
@@ -112,18 +106,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Pet'
-        '404':
-          description: No pets found with the given name
-          content:
-            application/json; charset=utf-8:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '400':
-          description: Name query parameter is required
-          content:
-            application/json; charset=utf-8:
-              schema:
-                $ref: '#/components/schemas/Error'
       security:
         - {}
         - JWT: []
@@ -137,17 +119,40 @@ paths:
             application/json; charset=utf-8:
               schema:
                 $ref: '#/components/schemas/Pet'
-        '409':
-          description: Pet with this ID already exists
-          content:
-            application/json; charset=utf-8:
-              schema:
-                $ref: '#/components/schemas/Error'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/PetCreate'
+      security:
+        - {}
+        - JWT: []
+
+  /findPetsByType:
+    get:
+      description: Get pets by type
+      parameters:
+        - name: petType
+          in: query
+          required: true
+          description: type of the pets to retrieve
+          schema:
+            $ref: '#/components/schemas/PetType'
+      responses:
+        '200':
+          description: Pets found
+          content:
+            application/json; charset=utf-8:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Type query parameter is required
+          content:
+            application/json; charset=utf-8:
+              schema:
+                $ref: '#/components/schemas/Error'
       security:
         - {}
         - JWT: []
@@ -158,11 +163,11 @@ components:
       type: object
       properties:
         id:
-          type: string
+          type: number
         name:
           type: string
-        type:
-          type: string
+        petType:
+          $ref: '#/components/schemas/PetType'
       required:
         - id
         - name
@@ -174,13 +179,29 @@ components:
           type: string
       required:
         - error
+    PetCreate:
+      type: object
+      properties:
+        name:
+          type: string
+        petType:
+          $ref: '#/components/schemas/PetType'
+      required:
+        - name
+        - petType
     PetUpdate:
       type: object
       properties:
         name:
           type: string
-        type:
-          type: string
+        petType:
+          $ref: '#/components/schemas/PetType'
+    PetType:
+      type: string
+      enum:
+        - dog
+        - cat
+        - fish
 
   securitySchemes:
     JWT:
